--- a/FrontendWPF/PageParam.xaml
+++ b/FrontendWPF/PageParam.xaml
@@ -30,7 +30,7 @@
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="Padding" Value="1,5"/>
             <Setter Property="Width" Value="200"/>
-            <!-- Ajustez la largeur ici -->
+            <!-- Adjust properties  -->
             <Setter Property="Height" Value="40"/>
             <Setter Property="BorderThickness" Value="1"/>
             <Setter Property="BorderBrush" Value="#FF4D67AC"/>
@@ -72,7 +72,7 @@
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
 
-                    <!-- Section Langue -->
+                    <!-- language selection -->
                     <TextBlock Text="Langues" Style="{StaticResource LabelStyle}" Grid.Column="0" Grid.Row="0"/>
                     <StackPanel Grid.Column="0" Grid.Row="1">
                         <RadioButton Content="English " GroupName="Langues" Style="{StaticResource RadioButtonStyle}"/>
