--- a/FrontendWPF/PageNew.xaml
+++ b/FrontendWPF/PageNew.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:WpfApp1"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Newsave">
+      Title="NewSave" IsEnabled="False">
 
     <!-- Les ressources de la Page -->
     <Page.Resources>
