--- a/FrontendWPF/MainWindow.xaml
+++ b/FrontendWPF/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Easysave" Height="450" Width="800"
+        Title="EasySave" Height="450" Width="800"
         FontFamily="Raleway Light">
     <Window.Resources>
         <!-- Style pour les boutons animés -->
@@ -91,36 +91,38 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <Image Source="C:\Users\sissy\Desktop\LEPROJET\FrontendWPF\easysavelogo.png" Grid.Row="0" Margin="10" Height="90" Stretch="UniformToFill"/>
+            <Image Source="easysavelogo.png" Grid.Row="0" Margin="10" Height="90" Stretch="UniformToFill"/>
 
             <StackPanel Grid.Column="0" Grid.Row="2" VerticalAlignment="Center">
-                <Button Content="📁 Nouvelle sauvegarde" Style="{StaticResource AnimatedButtonStyle}" Click="NewSaveButton_Click" />
-                <Button x:Name="LogsButton"  Content="📜 Accès aux logs" Style="{StaticResource AnimatedButtonStyle}" Click="LogsButton_Click"/>
-                <Button Content="⚙️ Paramètres" Style="{StaticResource AnimatedButtonStyle}" Click="SettingsButton_Click" />
-                <Button Content="🔍 Suivi des sauvegardes" Style="{StaticResource AnimatedButtonStyle}" />
-            </StackPanel>       
+                <Button x:Name="NewSaveButton" Content="📁 Nouvelle sauvegarde" Style="{StaticResource AnimatedButtonStyle}" Click="NewSaveButton_Click" />
+                <Button x:Name="LogsButton" Content="📜 Accès aux logs" Style="{StaticResource AnimatedButtonStyle}" Click="LogsButton_Click"/>
+                <Button x:Name="SettingsButton" Content="⚙️ Paramètres" Style="{StaticResource AnimatedButtonStyle}" Click="SettingsButton_Click" />
+                <Button x:Name="TrackSavesButton" Content="🔍 Suivi des sauvegardes" Style="{StaticResource AnimatedButtonStyle}" />
+            </StackPanel>
 
-              <!-- log out button  -->
-            <Button Content="❌ Quitter" Style="{StaticResource QuitButtonStyle}" Grid.Row="4"/>
+
+            <!-- log out button  -->
+            <Button x:Name="CloseButton" Content="❌ Quitter" Style="{StaticResource QuitButtonStyle}" Grid.Row="4" Click="CloseButton_Click"/>
         </Grid>
 
         <!-- Main content area -->
         <StackPanel Grid.Column="1" Margin="10">
-            <TextBlock Text="MES SAUVEGARDES" FontWeight="Bold" FontSize="30" Margin="0,20,0,100" HorizontalAlignment="Center"/>
+            <TextBlock x:Name="mySaves" Text="MES SAUVEGARDES" FontWeight="Bold" FontSize="30" Margin="0,20,0,100" HorizontalAlignment="Center"/>
+
             <ListView Width="Auto" Margin="0,10">
-                
-                
-                
-              <ListView.ItemContainerStyle>
+
+
+
+                <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
                         <Setter Property="HorizontalAlignment" Value="Stretch"/>
                         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
                     </Style>
                 </ListView.ItemContainerStyle>
 
-        
-                        <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="nouvelle sauvegarde" FontWeight="Bold" FontSize="15" Margin="10,0" VerticalAlignment="Center"/>
+
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock x:Name="newSave" Text="nouvelle sauvegarde" FontWeight="Bold" FontSize="15" Margin="10,0" VerticalAlignment="Center"/>
                     <Button Content="▶ "  Width="33" Height="20" Background="white"/>
                     <Button Content="⏸" Margin="5" Width="33" Height="20" Background="white"/>
                     <Button Content="■ " Margin="5" Width="33" Height="20"  Background="White"/>
@@ -130,11 +132,10 @@
                     <ProgressBar Width="400" Height="15" Margin="0,10" Value="65"/>
                     <TextBlock Text="65%" VerticalAlignment="Center" Margin="5,0"/>
                 </StackPanel>
-                <TextBlock Text="temps estimé" FontWeight="Bold" FontSize="10" Margin="10,0"/>
+                <TextBlock x:Name="estimatedTime" Text="temps estimé" FontWeight="Bold" FontSize="10" Margin="10,0"/>
 
             </ListView>
         </StackPanel>
         <Frame x:Name="MainContentFrame" Grid.Column="1" Margin="10"/>
-        
     </Grid>
 </Window>
